--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       margin: 0;
       background: #222;
       overflow: hidden;
+      height: 100vh;
+      width: 100vw;
     }
 
     svg {
@@ -24,11 +26,10 @@
       position: fixed;
       top: 0;
       left: 0;
-      /* Crucial: Prevents default browser touch actions (like scrolling/zooming) that can interfere */
       touch-action: none;
     }
 
-    span {
+    .instruction-text {
       color: white;
       font-family: sans-serif;
       opacity: .3;
@@ -63,27 +64,22 @@
     }
 
     .app-footer .coffee-icon {
-      position: inherit;
       font-size: 18px;
-      color: rgba(255, 255, 255);
+      color: rgba(255, 255, 255, 0.8);
       line-height: 1;
       transform: translateY(1px);
     }
 
-    /* Rotate Device Message Styles */
     .rotate-device-message {
       display: none;
-      /* Hidden by default */
       position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
       height: 100vh;
       background-color: rgba(0, 0, 0, 0.95);
-      /* Darker overlay */
       color: white;
       z-index: 9999;
-      /* Ensure it's on top of everything */
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -92,7 +88,6 @@
       font-size: 20px;
       padding: 20px;
       box-sizing: border-box;
-      /* Include padding in width/height */
     }
 
     .rotate-device-message p {
@@ -106,7 +101,6 @@
       color: white;
       animation: rotateHint 1.5s infinite ease-in-out;
       transform: rotate(0deg);
-      /* Initial state for animation */
     }
 
     @keyframes rotateHint {
@@ -123,26 +117,64 @@
       }
     }
 
-    /* Media query to display the message only in portrait mode */
     @media (orientation: portrait) {
       .rotate-device-message {
         display: flex;
-        /* Show the overlay */
       }
 
-      /* Hide other game elements when in portrait mode */
       body>*:not(.rotate-device-message) {
         display: none;
       }
     }
 
-    /* Remove transform-origin from CSS for #bow. GSAP will handle it with svgOrigin */
     #bow {
       fill: none;
       stroke-linecap: round;
       vector-effect: non-scaling-stroke;
       pointer-events: none;
-      /* transform-origin: 100px 250px; <-- REMOVED */
+    }
+
+    #fullscreen-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 20;
+      background: rgba(255, 255, 255, 0.15);
+      border: none;
+      border-radius: 5px;
+      padding: 8px 12px;
+      color: white;
+      font-family: 'Poppins', sans-serif;
+      font-size: 14px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      transition: background 0.2s ease, opacity 0.2s ease;
+    }
+
+    #fullscreen-btn:hover {
+      background: rgba(255, 255, 255, 0.25);
+    }
+
+    #fullscreen-btn .material-symbols-outlined {
+      font-size: 20px;
+      line-height: 1;
+    }
+
+    @media (orientation: portrait) {
+
+      .rotate-device-message+.instruction-text,
+      .rotate-device-message+#fullscreen-btn {
+        display: none;
+      }
+    }
+
+    body:fullscreen,
+    body:-webkit-full-screen,
+    body:-moz-full-screen,
+    body:-ms-fullscreen {
+      background: #000;
     }
   </style>
 </head>
@@ -218,7 +250,12 @@
       <path d="M526,195l5-20l22,5l-9,16L526,195z M558,164l32-44l-35-9l-19,51L558,164z" />
     </g>
   </svg>
-  <span>Draw back an arrow and launch it!</span>
+  <span class="instruction-text">Draw back an arrow and launch it!</span>
+
+  <button id="fullscreen-btn">
+    <span class="material-symbols-outlined">fullscreen</span>
+    Play on Full Screen
+  </button>
 
   <footer class="app-footer">
     <p>Created By Rajveer Gurjar with the help of <span class="material-symbols-outlined coffee-icon">local_cafe</span>
@@ -226,7 +263,7 @@
   </footer>
 
   <script>
-    const shootSound = new Audio('assets/arrow-shoot.mp3'); // Make sure this path is correct!
+    const shootSound = new Audio('assets/arrow-shoot.mp3');
     var svg = document.querySelector("svg");
     var cursor = svg.createSVGPoint();
     var arrows = document.querySelector(".arrows");
@@ -235,34 +272,50 @@
     let lineSegment = {
       x1: 875, y1: 280, x2: 925, y2: 220
     };
-    // The pivot point for the bow string and arrow nock in SVG viewBox coordinates
     let pivot = { x: 100, y: 250 };
 
-    // Initial setup for the bow and arrow to place them correctly on load
     aim({ clientX: 320, clientY: 300 });
     window.addEventListener("pointerdown", draw);
 
-    // Attempt to lock screen orientation to landscape on load (best effort)
-    // This API's support and requirements (like user gesture or fullscreen) vary by browser.
     window.addEventListener('load', () => {
       if (screen.orientation && screen.orientation.lock) {
         screen.orientation.lock('landscape').catch((error) => {
           console.warn('Could not lock to landscape:', error);
-          // No direct visual feedback needed here as the CSS media query handles the fallback.
         });
-      } else if (screen.lockOrientation) { // Deprecated but included for older browsers
+      } else if (screen.lockOrientation) {
         screen.lockOrientation('landscape');
+      }
+    });
+
+    const fullscreenBtn = document.getElementById('fullscreen-btn');
+
+    function toggleFullscreen() {
+      if (!document.fullscreenElement) {
+        document.documentElement.requestFullscreen().catch(err => {
+          console.error(`Error attempting to enable fullscreen: ${err.message} (${err.name})`);
+        });
+      } else {
+        document.exitFullscreen();
+      }
+    }
+
+    fullscreenBtn.addEventListener('click', toggleFullscreen);
+
+    document.addEventListener('fullscreenchange', () => {
+      if (document.fullscreenElement) {
+        fullscreenBtn.innerHTML = '<span class="material-symbols-outlined">fullscreen_exit</span> Exit Full Screen';
+      } else {
+        fullscreenBtn.innerHTML = '<span class="material-symbols-outlined">fullscreen</span> Play on Full Screen';
       }
     });
 
     function draw(e) {
       e.preventDefault();
-      // Introduce a slight random angle for more realistic shots
       randomAngle = Math.random() * Math.PI * 0.03 - 0.015;
       TweenMax.to(".arrow-angle use", 0.3, { opacity: 1 });
       window.addEventListener("pointermove", aim);
       svg.addEventListener("pointerup", loose);
-      aim(e); // Call aim immediately for initial positioning
+      aim(e);
     }
 
     function aim(e) {
@@ -270,7 +323,6 @@
       let clientY = e.clientY;
       var point = getMouseSVG({ clientX, clientY });
 
-      // Constrain the aiming point to prevent pulling too far or in wrong directions
       point.x = Math.min(point.x, pivot.x - 7);
       point.y = Math.max(point.y, pivot.y + 7);
 
@@ -278,30 +330,25 @@
       var dy = point.y - pivot.y;
 
       var angle = Math.atan2(dy, dx) + randomAngle;
-      var bowAngle = angle - Math.PI; // Adjust angle for bow's visual orientation
+      var bowAngle = angle - Math.PI;
 
-      // Calculate distance to determine bow pull and scale
-      var distance = Math.min(Math.sqrt(dx * dx + dy * dy), 50); // Max pull distance
-      var scale = Math.min(Math.max(distance / 30, 1), 2); // Scale based on pull
+      var distance = Math.min(Math.sqrt(dx * dx + dy * dy), 50);
+      var scale = Math.min(Math.max(distance / 30, 1), 2);
 
-      // Animate the bow's scale and rotation
       TweenMax.to("#bow", 0.3, {
         scaleX: scale,
         rotation: bowAngle + "rad",
-        // **** IMPORTANT CHANGE HERE: Use svgOrigin for SVG elements ****
-        svgOrigin: "100 250" // Directly corresponds to pivot.x pivot.y in viewBox coords
+        svgOrigin: "100 250"
       });
 
-      // Animate arrow position and rotation
       TweenMax.to(".arrow-angle", 0.3, {
         rotation: bowAngle + "rad",
-        svgOrigin: "100 250" // Arrow pivots from this point
+        svgOrigin: "100 250"
       });
       TweenMax.to(".arrow-angle use", 0.3, {
-        x: -distance // Move arrow back based on pull distance
+        x: -distance
       });
 
-      // Animate bow string (polyline)
       TweenMax.to("#bow polyline", 0.3, {
         attr: {
           points:
@@ -309,7 +356,6 @@
         }
       });
 
-      // Animate the arc for trajectory preview
       var radius = distance * 9;
       var offset = {
         x: Math.cos(bowAngle) * radius,
@@ -331,7 +377,7 @@
             arcWidth +
             ",50"
         },
-        autoAlpha: distance / 60 // Fade arc in/out based on pull
+        autoAlpha: distance / 60
       });
     }
 
@@ -341,10 +387,8 @@
       window.removeEventListener("pointermove", aim);
       svg.removeEventListener("pointerup", loose);
 
-      // Reset bow to original state
       TweenMax.to("#bow", 0.4, {
         scaleX: 1,
-        // **** IMPORTANT CHANGE HERE: Use svgOrigin for SVG elements ****
         svgOrigin: "100 250",
         ease: Elastic.easeOut
       });
@@ -355,27 +399,24 @@
         ease: Elastic.easeOut
       });
 
-      // Create a new arrow element for the shot
       var newArrow = document.createElementNS("http://www.w3.org/2000/svg", "use");
       newArrow.setAttributeNS("http://www.w3.org/1999/xlink", "href", "#arrow");
       arrows.appendChild(newArrow);
 
-      // Get bezier path data from the arc and animate the arrow along it
       var path = MorphSVGPlugin.pathDataToBezier("#arc");
       TweenMax.to([newArrow], 0.5, {
         force3D: true,
         bezier: {
           type: "cubic",
           values: path,
-          autoRotate: ["x", "y", "rotation"] // Auto-rotate arrow along path
+          autoRotate: ["x", "y", "rotation"]
         },
-        onUpdate: hitTest, // Check for hit on each animation frame
+        onUpdate: hitTest,
         onUpdateParams: ["{self}"],
-        onComplete: onMiss, // If animation completes without hit, it's a miss
+        onComplete: onMiss,
         ease: Linear.easeNone
       });
 
-      // Hide the arc and the "aiming" arrow
       TweenMax.to("#arc", 0.3, { opacity: 0 });
       TweenMax.set(".arrow-angle use", { opacity: 0 });
     }
@@ -385,25 +426,23 @@
       var transform = arrow._gsTransform;
       var radians = (transform.rotation * Math.PI) / 180;
 
-      // Define the arrow's head segment for intersection test
       var arrowSegment = {
         x1: transform.x,
         y1: transform.y,
-        x2: Math.cos(radians) * 60 + transform.x, // 60 is the length of the arrow
+        x2: Math.cos(radians) * 60 + transform.x,
         y2: Math.sin(radians) * 60 + transform.y
       };
 
-      // Check for intersection with the target line segment
       var intersection = getIntersection(arrowSegment, lineSegment);
 
       if (intersection.segment1 && intersection.segment2) {
-        tween.pause(); // Stop the arrow animation on hit
+        tween.pause();
         var dx = intersection.x - target.x;
         var dy = intersection.y - target.y;
         var distance = Math.sqrt(dx * dx + dy * dy);
 
         var selector = ".hit";
-        if (distance < 7) { // Define a "bullseye" radius
+        if (distance < 7) {
           selector = ".loveyou";
         }
         showMessage(selector);
@@ -411,17 +450,15 @@
     }
 
     function onMiss() {
-      showMessage(".missyou"); // Show "miss" message if arrow completes trajectory
+      showMessage(".missyou");
     }
 
     function showMessage(selector) {
-      // Kill any ongoing animations for the message to prevent overlap
       TweenMax.killTweensOf(selector);
       TweenMax.killChildTweensOf(selector);
 
-      TweenMax.set(selector, { autoAlpha: 1 }); // Make message visible
+      TweenMax.set(selector, { autoAlpha: 1 });
 
-      // Animate message characters in
       TweenMax.staggerFromTo(
         selector + " path",
         0.5,
@@ -437,7 +474,6 @@
         0.05
       );
 
-      // Animate message characters out after a delay
       TweenMax.staggerTo(
         selector + " path",
         0.3,
@@ -451,9 +487,8 @@
       );
     }
 
-    // Converts mouse/touch coordinates to SVG viewBox coordinates
     function getMouseSVG(e) {
-      const bbox = svg.getBoundingClientRect(); // Bounding box of the SVG element
+      const bbox = svg.getBoundingClientRect();
       const svgX = bbox.left;
       const svgY = bbox.top;
       const svgWidth = bbox.width;
@@ -463,17 +498,14 @@
       const viewBoxWidth = parseFloat(viewBoxParts[2]);
       const viewBoxHeight = parseFloat(viewBoxParts[3]);
 
-      // Calculate scaling factors
       const scaleX = svgWidth > 0 ? viewBoxWidth / svgWidth : 0;
       const scaleY = svgHeight > 0 ? viewBoxHeight / svgHeight : 0;
 
-      // Apply scaling to client coordinates to get SVG coordinates
       cursor.x = (e.clientX - svgX) * scaleX;
       cursor.y = (e.clientY - svgY) * scaleY;
       return cursor;
     }
 
-    // Utility function to check for line segment intersection
     function getIntersection(segment1, segment2) {
       var dx1 = segment1.x2 - segment1.x1;
       var dy1 = segment1.y2 - segment1.y1;
